<resources>
    <string name="app_name">Listy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Listy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in with Google</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="bucket_list_fragment_title">Bucket List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_cancel_text">Cancel</string>
    <string name="button_add_text">Add</string>
    <string name="add_an_item_edit_text_hint">Add new item</string>
    <string name="add_button">Add</string>
    <string name="snack_item_deleted_msg">Item deleted</string>
    <string name="snack_undo_delete">UNDO</string>

    <!--menu-->
    <string name="action_archive_completed">Archive completed items</string>
    <string name="action_show_archived">Show archived</string>
    <string name="action_rate">Rate this app</string>

    <string name="menu_opened">Menu opened</string>
    <string name="menu_closed">Menu closed</string>
    <string name="confirm_dialog_title">Erase permanently all items in the trash?</string>
    <string name="confirm_dialog_cancel_btn">Cancel</string>
    <string name="confirm_dialog_yes_btn">Confirm</string>
    <string name="empty_list_title">Add your first item</string>
    <string name="empty_archive_title">Nothing archived yet</string>
    <string name="empty_trash_title">Nothing in the trash</string>

    <array name="drawer_list_items">
        <item>List</item>
        <item>Trash</item>
        <item>Archive</item>
    </array>
</resources>
