<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.list.MainActivity">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_archive_completed"
            android:orderInCategory="100"
            android:title="@string/action_archive_completed"
            app:showAsAction="never"
            android:checkable="true"/>
        <item
            android:id="@+id/action_show_archived"
            android:orderInCategory="100"
            android:title="@string/action_show_archived"
            app:showAsAction="never"
            android:checkable="true"/>
        <item
            android:id="@+id/action_rate"
            android:orderInCategory="100"
            android:title="@string/action_rate"
            app:showAsAction="never"
            android:checkable="true"/>
    </group>
</menu>
