<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorPrimaryDark">

    <android.support.constraint.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            android:hint="@string/add_an_item_edit_text_hint"
            android:padding="16dp"
            android:fontFamily="sans-serif"
            android:typeface="normal" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:text="@string/button_add_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="82dp"
                tools:layout_editor_absoluteX="207dp"
                android:id="@+id/button3"
                android:layout_marginEnd="16dp"
                android:layout_alignBaseline="@+id/button2"
                android:layout_alignBottom="@+id/button2"
                android:layout_alignParentEnd="true"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored" />

            <Button
                android:text="@string/button_cancel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="82dp"
                tools:layout_editor_absoluteX="303dp"
                android:id="@+id/button2"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/button3"
                android:layout_marginEnd="8dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored" />

        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_mic_white_48px"
            android:id="@+id/imageView3"
            app:layout_constraintRight_toRightOf="@+id/editText"
            app:layout_constraintTop_toTopOf="@+id/editText"
            app:layout_constraintBottom_toBottomOf="@+id/editText"
            android:layout_marginEnd="16dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
